fix spacing

--- a/module2_solution/css/styles.css
+++ b/module2_solution/css/styles.css
@@ -8,25 +8,24 @@ h1 {
   font-size: 175%;
 }
 
-p {
-  margin: 15px;
-  margin-top: 2em;
+section {
+  background-color: #878787;
+  margin: 10px;
+  height: 175px;
+  overflow: hidden;
 }
+
+p {
+  margin: 45px 15px 15px 15px;
+}
+
 
 .container {
-  position: relative;
-  margin-bottom: 15px;
-}
-
-.container div {
-  background-color: #878787;
-  margin-left: 15px;
+  width: 100%;
 }
 
 .heading {
-  position: absolute;
-  top: 0px;
-  right: 0px;
+  float: right;
   border: 2px solid black;
   margin: 0px;
   text-align: center;
@@ -47,36 +46,24 @@ p {
 }
 
 /* Simple Responsive Framework. */
-.row {
-  width: 100%;
-}
 
 #c1, #c2, #c3 {
-  position: relative;
   float: left;
-  border: 1px solid black;
-  height: 175px;
-  margin-bottom: 15px;
-  margin-right: 15px;
-  overflow: hidden;
 }
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
   #c1, #c2, #c3 {
-    width: 30%;
+    width: 33%;
   }
 }
 
 /********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
   #c1, #c2 {
-    width: 47%;
-  }
-  #c2 {
-    margin-right: 0px;
+    width: 50%;
   }
   #c3 {
-    width: 97.3%;
+    width: 100%;
   }
 }
